[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scenes/Actors/PoisonousCloud.gd" type="Script" id=1]

[sub_resource type="CircleShape2D" id=1]
radius = 8.0

[sub_resource type="Gradient" id=2]
colors = PoolColorArray( 0.22912, 0.469238, 0.25468, 1, 0.00651169, 0.277832, 0.0989832, 1 )

[sub_resource type="GradientTexture" id=3]
gradient = SubResource( 2 )

[sub_resource type="Curve" id=4]
_data = [ Vector2( 0, 0 ), 0.0, 0.0, 0, 0, Vector2( 0.0466102, 1 ), 0.0, 0.0, 0, 0, Vector2( 0.737288, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=5]
curve = SubResource( 4 )

[sub_resource type="ParticlesMaterial" id=6]
emission_shape = 2
emission_box_extents = Vector3( 5, 5, 5 )
flag_disable_z = true
direction = Vector3( 0, 0, 0 )
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 1.5
angular_velocity = 100.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale_curve = SubResource( 5 )
color_ramp = SubResource( 3 )

[node name="PoisonousCloud" type="Area2D"]
collision_layer = 4
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Particles2D" type="Particles2D" parent="."]
amount = 30
lifetime = 5.0
explosiveness = 1.0
randomness = 1.0
process_material = SubResource( 6 )

[node name="TimerDuration" type="Timer" parent="."]
wait_time = 5.0
one_shot = true
autostart = true

[node name="TimerTick" type="Timer" parent="."]
wait_time = 0.1

[connection signal="body_entered" from="." to="." method="_on_PoisonousCloud_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_PoisonousCloud_body_exited"]
[connection signal="timeout" from="TimerDuration" to="." method="_on_TimerDuration_timeout"]
[connection signal="timeout" from="TimerTick" to="." method="_on_TimerTick_timeout"]
